<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothConnection_Activity">


    <Button
    android:id="@+id/btnONOFF"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:text="@string/on_of" />

    <Button
        android:text="@string/enable_discoverable"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiscoverable_on_off"
        android:onClick ="btnEnableDisable_Discoverable"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFindUnpairedDevices"
        android:text="@string/discover"
        android:onClick="btnDiscover"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/btnStartConnection"
        android:id="@+id/lvNewDevices" />
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFindUnpairedDevices"
        android:id="@+id/btnStartConnection"
        android:text="@string/start_connection"/>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvNewDevices"
        android:layout_marginTop="44dp"
        android:onClick="onClick"
        android:text="@string/bluetooth_connection_finished" />


</RelativeLayout>