<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Character_Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:background="#2d2d2d"
                android:id="@+id/characterthumbnail"
                android:scaleType="centerCrop"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/txtname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtname"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtcountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtcountry"
                android:textColor="@color/colorPrimaryDark"
                android:background="#edecec"
                android:padding="8dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtdescription"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txthealth"
                android:background="#edecec"
                android:padding="8dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/txthealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txthealth"
                android:textColor="@color/colorPrimaryDark"
                android:background="#edecec"
                android:padding="8dp"
                android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtattack"
                android:background="#edecec"
                android:padding="8dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/txtattack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtattack"
                android:textColor="@color/colorPrimaryDark"
                android:background="#edecec"
                android:padding="8dp"
                android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtdefense"
                    android:background="#edecec"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtdefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtdefense"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="#edecec"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtspeed"
                    android:background="#edecec"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtspeed"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="#edecec"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/buttonSelectCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonText"
                android:textColor="@color/red" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>